# kinetik-ui

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  implementation.yml  spec.yml
crates/kinetik-ui/: Cargo.toml
crates/kinetik-ui-text/: Cargo.toml
crates/kinetik-ui-text/assets/: THIRD_PARTY.md
crates/kinetik-ui-text/src/: boundary.rs  cache.rs  edit.rs  lib.rs  navigation.rs  store.rs  tests.rs
crates/kinetik-ui-text/tests/: layout_budget_conformance.rs  read_only_ordered_input_conformance.rs  unicode_editing_conformance.rs  unicode_layout_conformance.rs
crates/kinetik-ui-vello/: Cargo.toml
crates/kinetik-ui-vello/src/: lib.rs
crates/kinetik-ui-vello/src/tests/: native_textures.rs
crates/kinetik-ui-vello/tests/: render_translation_conformance.rs
crates/kinetik-ui/examples/: first_frame.rs
crates/kinetik-ui/src/: lib.rs
crates/kinetik-ui/tests/: public_api_surface.rs
crates/stern-core/: Cargo.toml
crates/stern-core/src/: actions.rs  debug.rs  interaction.rs  lib.rs  liveness.rs  memory.rs  observers.rs  render.rs  shortcut_presentation.rs  theme.rs
crates/stern-core/src/runtime/: types.rs  ui.rs
crates/stern-core/src/theme/: defaults.rs  model.rs  recipes.rs  tests.rs  tokens.rs
crates/stern-core/tests/: action_conformance.rs  async_liveness_conformance.rs  diagnostic_conformance.rs  domain_drag_action_conformance.rs  dpi_snap_conformance.rs  drag_threshold_conformance.rs  focus_ring_conformance.rs  harness.rs  input_ordering_conformance.rs  layout_invariants.rs  multi_transaction_selection_conformance.rs  observer_conformance.rs  ownership_reconciliation_conformance.rs  pointer_arbitration_conformance.rs  render_color_conformance.rs  root_primary_press_ordinal_conformance.rs  runtime_spatial_conformance.rs  selection_modifier_conformance.rs  semantic_query_conformance.rs  shortcut_presentation_conformance.rs  size_tokens_conformance.rs  spacing_tokens_conformance.rs  staged_scroll_offset_conformance.rs  text_owner_mode_conformance.rs  transform_hit_conformance.rs  typography_family_conformance.rs  typography_foundation_conformance.rs  wheel_click_normalization_conformance.rs
crates/stern-core/tests/focus_keyboard_conformance/: shortcuts.rs  support.rs  text_lifecycle.rs  traversal.rs
crates/stern-core/tests/pointer_conformance/: drag_capture.rs  drop_target.rs  press_context.rs  scroll_focus.rs  support.rs
crates/stern-text/: Cargo.toml
crates/stern-text/assets/: THIRD_PARTY.md
crates/stern-text/src/: boundary.rs  cache.rs  edit.rs  engine.rs  fonts.rs  layout.rs  lib.rs  navigation.rs  selection.rs  store.rs  style.rs  tests.rs  undo.rs  viewport.rs
crates/stern-text/tests/: font_feature_conformance.rs  font_weight_conformance.rs  layout_budget_conformance.rs  read_only_ordered_input_conformance.rs  shaped_key_conformance.rs  text_overflow_conformance.rs  text_viewport_conformance.rs  undo_budget_conformance.rs  unicode_editing_conformance.rs  unicode_layout_conformance.rs
crates/stern-winit/: Cargo.toml
crates/stern-winit/src/: accessibility.rs  conversions.rs  input.rs  lib.rs  repaint.rs  requests.rs  shell.rs  tests.rs  time.rs  utils.rs  viewport.rs
crates/stern-winit/tests/: shell_services.rs
docs/: accessibility-adapters.md  alpha-readiness.md  catalogue-conformance-matrix.md  conformance-methodology.md  crate-migration.md  docking-interactions.md  elevation-migration.md  icon-atlas-plan.md  public-api-policy.md  radius-migration.md  release.md  render-snapshots.md  showcase-plan.md  specs.md  typography-migration.md
tools/: capture-demo-vello.mjs  capture-demo-vello.test.mjs  identity-scan.mjs
(+514 files in other folders)
