[workspace]
resolver = "3"
members = [
    "crates/kinetik-ui",
    "crates/kinetik-ui-core",
    "crates/kinetik-ui-render",
    "crates/kinetik-ui-text",
    "crates/kinetik-ui-vello",
    "crates/kinetik-ui-widgets",
    "crates/kinetik-ui-winit",
    "apps/kinetik-ui-showcase",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/kinetik/kinetik-ui"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
