[package]
name = "kinetik-ui-text"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cosmic-text = { version = "0.19.0", default-features = false, features = ["std", "swash"] }
kinetik-ui-core = { path = "../kinetik-ui-core" }

[lints]
workspace = true
