[package]
name = "kinetik-ui-vello"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kinetik-ui-core = { path = "../kinetik-ui-core" }
kinetik-ui-render = { path = "../kinetik-ui-render" }
kinetik-ui-text = { path = "../kinetik-ui-text" }
vello = "0.9.0"

[lints]
workspace = true
