[package]
name = "kinetik-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["platform-winit", "render-vello"]
platform-winit = ["dep:kinetik-ui-winit"]
render-vello = ["dep:kinetik-ui-vello"]

[dependencies]
kinetik-ui-core = { path = "../kinetik-ui-core" }
kinetik-ui-render = { path = "../kinetik-ui-render" }
kinetik-ui-text = { path = "../kinetik-ui-text" }
kinetik-ui-widgets = { path = "../kinetik-ui-widgets" }
kinetik-ui-winit = { path = "../kinetik-ui-winit", optional = true }
kinetik-ui-vello = { path = "../kinetik-ui-vello", optional = true }

[lints]
workspace = true
