[package]
name = "stern-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Platform-independent runtime, layout, input, semantics, and primitives for Stern"

[lints]
workspace = true
